<resources>

    <string name="app_name">PerdsPasLeNord</string>


    <string name="map_style">
        [
  {
    "elementType": "labels",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "administrative.neighborhood",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]</string>


    <string name="rb_Titre1">Carnet de Route</string>


    <string name="pm_0">____</string>
    <string name="pm_1">__</string>
    <string name="pm_2">__</string>
    <string name="pm_3">____</string>
    <string name="pm_4">____,</string>
    <string name="pm_5">________</string>
    <string name="pm_6">__</string>
    <string name="pm_7">__</string>
    <string name="pm_8">____</string>
    <string name="pm_9">____.</string>
    <string name="pm_10">____ </string>
    <string name="pm_11">_________</string>
    <string name="pm_12">__</string>
    <string name="pm_13">____</string>
    <string name="pm_14">______</string>
    <string name="pm_15">______</string>
    <string name="pm_16">___________</string>
    <string name="pm_17">___</string>
    <string name="pm_18">_________.</string>


    <string name="rules_Map_1">La carte qui vous est fournie est divisée en plusieures zones de couleurs, correspondant aux différents quartiers de la ville. </string>
    <string name="rules_Map_2">Lorsque vous cliquez sur une des zones, les différents lieux intéressant apparaitront, sous la forme de marqueurs de différentes couleurs.</string>
    <string name="rules_Map_3">Il existe 3 types de marqueur différents, correspondant à 3 types de lieu différents. C\'est en cliquant sur les marqueurs que vous ferez apparaitre l\'interface du jeu.</string>

    <string name="rules_UI_1">L\'interface possède 3 boutons principaux (Informations - Photographies - Jeux) correspondant aux différentes actions disponible pour le lieu sélectionné. </string>
    <string name="rules_UI_2">Vous y trouverez aussi un bouton permettant d\'accéder à votre Carnet de Bord. C\'est dans ce dernier que seront enregistré divers informations concernant votre partie.</string>
    <string name="rules_UI_3">Pour finir, vous trouverez aussi un bouton permettant de fermer l\'interface et de revenir à la carte.</string>

    <string name="rules_Game_1">Vous trouverez un mini-jeu à chaque point principal. Chaque jeu ne peut être lancé qu\'une seule fois, et ne peut être arrêté une fois commencé.</string>
    <string name="rules_Game_2">Il existe plusieurs jeux différents, mais ils vous demanderont tous d\'être attentifs à votre environnement ainsi qu\'aux différentes informations qui vous seront fournies.  </string>
    <string name="rules_Game_3">Lorsque vous gagnez un jeu, vous débloquez un mot composant une phrase mystère, visible dans votre Carnet de bord. Compléter cette phrase est l\'un de vos objectifs secondaire.</string>

    <string name="deroulement_Game_1">Une partie se déroule très simplement. Vous devez d\'abord vous rendre à l\'un des lieux affiché sur votre carte.</string>
    <string name="deroulement_Game_2">Une fois devant le lieu, vous pouvez accéder aux différentes rubriques associé à ce dernier. Une fois le lieu complété, il ne vous reste plus qu\'à vous rendre au prochain lieu.</string>
    <string name="deroulement_Game_3">Le but de ce jeu est que vous vous amusiez tout en visitant la capitale des Flandres. </string>


    <string name="title_PlayerSelection">SÉLÉCTION DU JOUEUR</string>

    <string name="point_secondaire">Point Secondaire</string>
    <string name="secret_d_couvert">Secret Découvert</string>
    <string name="point_principaux">Point Principaux</string>

    <string name="vieux_lille">Vieux Lille</string>
    <string name="grand_place">Grand Place</string>
    <string name="lille_centre">Lille Centre</string>
    <string name="place_du_th_atre">Place du Théatre</string>


    <string name="noPlayer_message"><u>L\'équipe ne possède pas de joueur pour le moment.</u></string>
    <string name="qcm_txtv_question1">Question 1</string>
    <string name="qcm_txtv_question2">Question 2</string>
    <string name="qcm_txtv_question3">Question 3</string>
    <string name="qcm_txtv_reponse">Réponses :</string>

</resources>
