<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rulesExplication_Screen"
    android:layout_width="1280dp"
    android:layout_height="800dp"
    android:background="@drawable/background_teamcreation">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:text="RÈGLES DU JEU :"
        android:textColor="@color/rouge"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/rules_Carte"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_selectionjoueur"
        android:padding="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginLeft="50dp"
            android:text="@string/rules_title_carte"
            android:textColor="@color/noir" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/rulesexplication_zones"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_Map_1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:background="@drawable/rulesexplication_clickzone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_Map_2"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="57dp"
                android:layout_margin="15dp"
                android:background="@drawable/markers_triple"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_Map_3"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rules_Interface"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_selectionjoueur"
        android:padding="20dp"
        android:orientation="vertical"
        android:visibility="visible">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginLeft="50dp"
            android:text="@string/rules_title_interface"
            android:textColor="@color/noir" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@drawable/rulesexplication_mainbutton"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_UI_1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@drawable/btn_carnet_on"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_UI_2"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@drawable/btn_map"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_UI_3"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>




    </LinearLayout>

    <LinearLayout
        android:id="@+id/rules_Jeu"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_selectionjoueur"
        android:padding="20dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:layout_marginLeft="50dp"
            android:text="@string/rules_title_jeu"
            android:textColor="@color/noir" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@drawable/btn_jeu_on"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_Game_1"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@drawable/btn_carnet_on"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_Game_2"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_margin="15dp"
                android:background="@drawable/rulesexplication_mystere"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/rules_Game_3"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/noir"/>



        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_precedent"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_action_precedent"
        android:layout_margin="50dp"/>


    <Button
        android:id="@+id/btn_suivant"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_action_suivant"
        android:layout_margin="50dp"/>




</RelativeLayout>