<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.maps.MapView
        android:id="@+id/googleMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/layoutForBlockMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"/>

    <Button
        android:id="@+id/centerBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:background="@drawable/btn_position" />

    <LinearLayout
        android:id="@+id/layoutForLegend"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="45dp"
        android:layout_alignRight="@+id/googleMap"
        android:visibility="visible">

        <Button
            android:id="@+id/legendBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_legende_out"/>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp"
            android:background="@drawable/legende_top">

            <TextView
                android:id="@+id/legend_ZoneName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vieux_lille"
                android:textAlignment="center"
                android:textColor="@color/rouge"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/legend_passage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:src="@drawable/marker_principal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_principaux"
                    android:textColor="@color/noir"
                    android:textSize="18sp"
                    android:layout_marginLeft="50sp"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/legend_mystere"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:src="@drawable/marker_secondaire"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/point_secondaire"
                    android:textColor="@color/noir"
                    android:textSize="18sp"
                    android:layout_marginLeft="50sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/legend_secret"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="25dp"
                    android:src="@drawable/marker_secret"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_d_couvert"
                    android:textColor="@color/noir"
                    android:textSize="18sp"
                    android:layout_marginLeft="50sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/legend_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/zone_vert"/>

                    <TextView
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:text="@string/vieux_lille"
                        android:textAlignment="center"
                        android:textColor="@color/noir"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/zone_rouge"/>

                    <TextView
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:text="@string/grand_place"
                        android:textAlignment="center"
                        android:textColor="@color/noir"
                        android:textSize="18sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/zone_bleu"/>

                    <TextView
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lille_centre"
                        android:textColor="@color/noir"
                        android:textSize="18sp"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="25dp"
                        android:src="@drawable/zone_orange"/>

                    <TextView
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:text="@string/place_du_th_atre"
                        android:textColor="@color/noir"
                        android:textAlignment="center"
                        android:textSize="18sp"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutForLegend2"
        android:layout_width="540dp"
        android:layout_height="90dp"
        android:layout_alignRight="@+id/googleMap"
        android:layout_marginTop="685dp"
        android:layout_marginRight="45dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:background="@drawable/legende_bot"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/legend_nbPointPassage"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="80dp"
            android:text="01 / 19"
            android:gravity="center_vertical"
            android:textColor="@color/noir"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/legend_nbPointMystere"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="85dp"
            android:text="01 / 10"
            android:gravity="center_vertical"
            android:textColor="@color/noir"
            android:textSize="20sp"/>


        <TextView
            android:id="@+id/legend_nbPointSecret"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="80dp"
            android:text="01 / 05"
            android:gravity="center_vertical"
            android:textColor="@color/noir"
            android:textSize="20sp"/>


        </LinearLayout>

</RelativeLayout>